<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".ui.auth.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/marvel_studio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/comicneue_bold"
                android:text="@string/unete_a_nosotros_vengador"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/miles" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="100dp"

                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView">

                <ImageView
                    android:id="@+id/ivTakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_photo_camera_24" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/top_corners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILNames"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/nombres_completos"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILIdentification"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILNames"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEIdentification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/identificacion"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILIdentification"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILPhone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILEmail"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/celular"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILPhone"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILRepeatPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILPassword"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIERepeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/repetir_contrase_a"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/comicneue_bold"
                    android:text="@string/registrarse"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="40dp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    app:iconGravity="textEnd"
                    app:iconSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILRepeatPassword" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/comicneue_regular"
                    android:text="@string/ya_tienes_cuenta"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/btnSignUp"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

                <TextView
                    android:id="@+id/tvLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/comicneue_bold"
                    android:text="@string/inicia_sesion"
                    android:textSize="18sp"
                    android:textColor="@color/red_500"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>