<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.auth.LogInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/marvel_studio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/comicneue_bold"
                android:text="La Historia de"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/login_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cLSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/top_corners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tILPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/white"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILEmail"
                    app:startIconDrawable="@drawable/ic_user"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tIEPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comicneue_regular"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/comicneue_bold"
                    android:text="Iniciar Sesion"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="8dp"
                    app:iconGravity="textEnd"
                    app:iconSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tILPassword" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="40dp"
                    android:fontFamily="@font/comicneue_regular"
                    android:text="@string/no_tienes_cuenta"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/comicneue_bold"
                    android:text="@string/registrate"
                    android:textColor="@color/red_500"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>